ios/src/Imaging.h

extern IMAGING_EXPORT Imaging ImagingNew(const char* mode, int xsize, int ysize);
extern IMAGING_EXPORT Imaging ImagingNewDirty(const char* mode, int xsize, int ysize);
extern IMAGING_EXPORT Imaging ImagingNew2Dirty(const char* mode, Imaging imOut, Imaging imIn);
extern IMAGING_EXPORT void    ImagingDelete(Imaging im);
extern IMAGING_EXPORT Imaging ImagingNewBlock(const char* mode, int xsize, int ysize);
extern IMAGING_EXPORT Imaging ImagingNewPrologue(const char *mode,
                                  int xsize, int ysize);
extern IMAGING_EXPORT Imaging ImagingNewPrologueSubtype(const char *mode,
                                         int xsize, int ysize,
                                         int structure_size);
extern IMAGING_EXPORT void ImagingCopyPalette(Imaging destination, Imaging source);
extern IMAGING_EXPORT ImagingPalette ImagingPaletteNew(const char *mode);
extern IMAGING_EXPORT ImagingPalette ImagingPaletteNewBrowser(void);
extern IMAGING_EXPORT ImagingPalette ImagingPaletteDuplicate(ImagingPalette palette);
extern IMAGING_EXPORT void           ImagingPaletteDelete(ImagingPalette palette);
extern IMAGING_EXPORT int  ImagingPaletteCachePrepare(ImagingPalette palette);
extern IMAGING_EXPORT void ImagingPaletteCacheUpdate(ImagingPalette palette,
                                      int r, int g, int b);
extern IMAGING_EXPORT void ImagingPaletteCacheDelete(ImagingPalette palette);
/* Threading */
/* --------- */

typedef void* ImagingSectionCookie;
extern IMAGING_EXPORT void ImagingSectionEnter(ImagingSectionCookie* cookie);
extern IMAGING_EXPORT void ImagingSectionLeave(ImagingSectionCookie* cookie);
extern IMAGING_EXPORT Imaging ImagingBlend(Imaging imIn1, Imaging imIn2, float alpha);
extern IMAGING_EXPORT Imaging ImagingCopy(Imaging im);
extern IMAGING_EXPORT Imaging ImagingFlipLeftRight(Imaging imOut, Imaging imIn);
extern IMAGING_EXPORT Imaging ImagingFlipTopBottom(Imaging imOut, Imaging imIn);
extern IMAGING_EXPORT Imaging ImagingGaussianBlur(Imaging imOut, Imaging imIn, float radius,
                                   int passes);
extern IMAGING_EXPORT Imaging ImagingRotate90(Imaging imOut, Imaging imIn);
extern IMAGING_EXPORT Imaging ImagingRotate180(Imaging imOut, Imaging imIn);
extern IMAGING_EXPORT Imaging ImagingRotate270(Imaging imOut, Imaging imIn);
extern IMAGING_EXPORT Imaging ImagingTranspose(Imaging imOut, Imaging imIn);
extern IMAGING_EXPORT Imaging ImagingTransverse(Imaging imOut, Imaging imIn);
extern IMAGING_EXPORT Imaging ImagingResample(Imaging imIn, int xsize, int ysize, int filter, float box[4]);
extern IMAGING_EXPORT Imaging ImagingTransform(
    Imaging imOut, Imaging imIn, int method, int x0, int y0, int x1, int y1,
    double *a, int filter, int fill);
extern IMAGING_EXPORT Imaging ImagingBoxBlur(Imaging imOut, Imaging imIn, float radius, int n);
extern IMAGING_EXPORT Imaging ImagingCopy2(Imaging imOut, Imaging imIn);